Adding multi-channel input support on Windows with minimal impact on all other input cases.

Focus is here to support one particular device and to adapt internally to its multi-channel
structure.

This CL adds a dependency of a channel layout called "discrete" for the input later on Windows.
It also ensures that the input device can be opened up with four channels, but these channels
are then downmixed to two channels to fit the renderer side.

Bug: 868026
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I2fc63802d99d9d438bdd9f8baf424b3d8cdfab65
Reviewed-on: https://chromium-review.googlesource.com/c/1268118
Commit-Queue: Henrik Andreasson <henrika@chromium.org>
Reviewed-by: Oskar Sundbom <ossu@chromium.org>
Reviewed-by: Guido Urdaneta <guidou@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602760}
Former-commit-id: 4e7696d420da6fbf39c556d0d904c2766860c9c1