media/audio/audio_manager_base.cc
@@ -249,6 +249,7 @@ AudioInputStream* AudioManagerBase::MakeAudioInputStream(
   if (!params.IsValid() || (params.channels() > kMaxInputChannels) ||
       device_id.empty()) {
     DLOG(ERROR) << "Audio parameters are invalid for device " << device_id;
+    VLOG(1) << params.AsHumanReadableString();
     return nullptr;
   }
 
